--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -37,8 +37,8 @@
         flex-direction: column;
         align-items: flex-start;
         @media screen and (max-width:768px){
-            text-align: center;
-            align-items: center;
+            text-align: left;
+            align-items: left;
         }
     }
 
@@ -550,7 +550,7 @@
         margin: 0 auto;
     }
 }
-//step=========================================================================
+//step===========================================================================
 .step {
     padding: 100px 0 138px;
     background: #F9FCFF;
@@ -799,7 +799,7 @@
     }
    
 }
-//virtual========================================================================
+//virtual=========================================================================
 .virtual {
     padding: 120px 0;
     background: #F9FCFF;
@@ -901,7 +901,7 @@
         }
     }
 }
-//help=========================================================================
+//help============================================================================
 .help {
     padding: 150px 0 120px;
     @media screen and (max-width:768px){
