--- a/scss/style.scss
+++ b/scss/style.scss
@@ -138,7 +138,7 @@
     line-height: 130%;
     letter-spacing: 0.02em;
     color: #7872B9;
-    @media screen and (max-width:640px){
+    @media screen and (max-width:480px){
         font-size: 18px;
     }
 }
@@ -152,6 +152,10 @@
         font-size: 14px;
         
     }
+}
+//Применить reverse по row направлению
+.reverse{
+    flex-direction: row-reverse;
 }
 
 
