--- a/scss/rates.scss
+++ b/scss/rates.scss
@@ -129,3 +129,79 @@
     }
    
 }
+//rates=======================================================================
+.rates {
+    padding: 110px 0 120px ;
+    @media screen and (max-width:768px){
+        padding: 50px 0;
+    }
+    &__body {
+        text-align: center;
+    }
+
+    &__title {
+        margin-bottom: 80px;
+        @media screen and (max-width:640px){
+            @media screen and (max-width:30px){
+             
+            }
+        }
+    }
+
+    &__box {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 40px 20px;
+        justify-content: center;
+    }
+
+    
+}
+
+.item-rates {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    overflow: hidden;
+    background: #F9FCFF;
+    border-radius: 15px;
+    min-height: 384px;
+    flex: 0 0 280px;
+    &__header{
+        background: #EBF5FF;
+        min-height: 57px;
+        overflow: hidden;
+        
+    }
+    &__title {
+        font-family: var(--font-montserrat-norms-medium);
+        font-size: 18px;
+        line-height: 140%;
+        letter-spacing: 0.02em;
+        color: #4D4D52;
+        margin: auto 0;
+    }
+    &__content {
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+    }   
+
+    
+
+    &__price {
+
+    }
+
+    &__pay {
+
+    }
+
+    &__footer {
+
+    }
+
+    &__benefit {
+
+    }
+}
